added hero and three columns section

--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -2,4 +2,4 @@ $color-white: #F0F1F1;
 $color-brown: #5E5322;
 $color-gold: #FAD648;
 $color-lightgrey: #737373;
-$color-grey: #3C3C3C;
+$color-grey: #393939;
