--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -18,6 +18,9 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   vertical-align: baseline;
   background: transparent;
 }
+* {
+  box-sizing: border-box;
+}
 body {
   line-height: 1;
 }
