--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,5 +1,8 @@
 .header {
+  display: flex;
+  justify-content: flex-end;
   .nav__bar {
+    width: 600px;
     .nav__list {
       display: flex;
       justify-content: space-between;
