--- a/src/components/about_us/AboutUs.scss
+++ b/src/components/about_us/AboutUs.scss
@@ -38,3 +38,44 @@
     }
   }
 }
+
+@media (max-width: 880px) {
+  .about__us {
+    flex-direction: column;
+    .about__us-main {
+      width: 100%;
+      height: 600px;
+      .signature {
+        margin-top: 0;
+        margin-bottom: 10px;
+      }
+    }
+    .about__us-image {
+      width: 100%;
+      height: 500px;
+    }
+  }
+}
+@media (max-width: 880px) {
+  .about__us {
+
+    .about__us-main {
+      .about__us-title {
+        margin-top: 20px;
+      }
+      .about__us-text {
+        font-size: 24px;
+        line-height: 40px;
+      }
+      .signature {
+        img {
+          width: 150px;
+          height: 100px;
+        }
+      }
+    }
+    .about__us-image {
+
+    }
+  }
+}
