--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -12,7 +12,7 @@
     width: 100vw;
     height: 100vh;
     z-index: -1;
-    opacity: 20%;
+    opacity: 10%;
   }
   .contact__us {
     display: flex;
@@ -39,6 +39,12 @@
           flex-direction: column;
           font-size: 16px;
           font-weight: 600;
+          .error {
+            margin-top: 15px;
+            color: red;
+            font-size: 15px;
+            font-weight: 500;
+          }
           input {
             background-color: transparent;
             width: 240px;
@@ -48,7 +54,7 @@
             font-size: 18px;
             margin-top: 10px;
             &::placeholder {
-              color: #3C3C3C26;
+              color: rgba(0, 0, 0, 0.15);
             }
           }
         }
@@ -59,6 +65,12 @@
         font-size: 16px;
         font-weight: 600;
         margin-top: 40px;
+        .error {
+          margin-top: 15px;
+          color: red;
+          font-size: 15px;
+          font-weight: 500;
+        }
         textarea {
           padding-top: 15px;
           margin-top: 10px;
@@ -68,7 +80,7 @@
           background-color: transparent;
           resize: none;
           &::placeholder {
-            color: #3C3C3C26;
+            color: rgba(0, 0, 0, 0.15);
           }
         }
       }
@@ -87,6 +99,41 @@
         color: #3C3C3C;
         font-weight: 300;
         font-family: "Open Sans", sans-serif;
+      }
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .contact {
+    justify-content: center;
+    .contact__us {
+      margin-right: 0;
+    }
+  }
+}
+
+@media (max-width: 570px) {
+  .contact {
+    .contact__us {
+      .contact__us-title {
+        flex-wrap: wrap;
+        text-align: center;
+        margin: 0 10px;
+      }
+      .contact__form {
+        width: 350px;
+        .main__form {
+          flex-direction: column;
+          label {
+            input {
+              width: 100%;
+            }
+            &:nth-child(2) {
+              margin-top: 25px;
+            }
+          }
+        }
       }
     }
   }
