--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -1,10 +1,153 @@
 .login {
-  margin-top: 35px;
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: calc(100vh - 35px);
+  margin-top: 35px;
   .container {
-    width: 1440px;
-    margin-right: 20px;
+    width: 100%;
+  }
+  .login__main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: calc(100vh - 140px);
+    .login__title {
+      font-size: 40px;
+      font-weight: 500;
+      color: #3C3C3C;
+    }
+    .login__image {
+      margin: 25px 0 60px 0;
+    }
+    .register__form {
+      width: 500px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .inputs {
+        background-color: #F0F1F1;
+        width: 380px;
+        height: 330px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        label {
+          display: flex;
+          flex-direction: column;
+          width: 70%;
+          font-size: 16px;
+          font-weight: 300;
+          color: #3C3C3C;
+          .error {
+            color: red;
+            font-size: 14px;
+            margin-top: 10px;
+          }
+          &:nth-child(2) {
+            margin-top: 20px;
+          }
+          &:nth-child(3) {
+            margin-top: 20px;
+          }
+          input {
+            width: 90%;
+            border: none;
+            border-bottom: 1px solid #3C3C3C;
+            background-color: transparent;
+            padding: 10px 5px;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    .login__form {
+      width: 500px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .inputs {
+        background-color: #F0F1F1;
+        width: 380px;
+        height: 230px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        label {
+          display: flex;
+          flex-direction: column;
+          width: 70%;
+          font-size: 16px;
+          font-weight: 300;
+          color: #3C3C3C;
+          &:nth-child(2) {
+            margin-top: 20px;
+          }
+          input {
+            width: 90%;
+            border: none;
+            border-bottom: 1px solid #3C3C3C;
+            background-color: transparent;
+            padding: 10px 5px;
+            font-size: 16px;
+          }
+          .error {
+            margin-top: 10px;
+            color: red;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+    .buttons {
+      margin-top: 30px;
+      display: flex;
+      justify-content: space-between;
+      width: 500px;
+      button {
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        font-size: 18px;
+        font-weight: 300;
+        font-family: "Open Sans", sans-serif;
+        color: #000000;
+        padding: 15px 10px;
+        &:hover {
+          border: 1px solid #3C3C3C;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 530px) {
+  .login {
+    .login__main {
+      .buttons {
+        width: 350px;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .login {
+    .login__main {
+      .login__form {
+        .inputs {
+          width: 350px;
+        }
+      }
+      .register__form {
+        .inputs {
+          width: 350px;
+        }
+      }
+    }
   }
 }
