--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -12,10 +12,20 @@
     align-items: center;
     flex-direction: column;
     height: calc(100vh - 140px);
+    .back__to-home {
+      font-size: 18px;
+      border: 1px solid #3C3C3C;
+      background-color: transparent;
+      padding: 15px 35px;
+      cursor: pointer;
+      font-family: "Open Sans", sans-serif;
+      font-weight: 500;
+    }
     .login__title {
       font-size: 40px;
       font-weight: 500;
       color: #3C3C3C;
+      text-align: center;
     }
     .login__image {
       margin: 25px 0 60px 0;
@@ -118,6 +128,7 @@
         color: #000000;
         padding: 15px 10px;
         &:hover {
+          margin: -1px;
           border: 1px solid #3C3C3C;
         }
       }
