added return form

--- a/src/components/About_us/AboutUs.scss
+++ b/src/components/About_us/AboutUs.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   .about__us-image {
     width: 52%;
-    background-image: url("../../assets/People.jpg");
+    background-image: url("People.jpg");
     background-position: center;
     background-size: cover;
   }
