--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   display: flex;
   .first__look-img {
-    background-image: url("../../assets/Home-Hero-Image.jpg");
+    background-image: url("../Hero/Home-Hero-Image.jpg");
     width: 800px;
     height: 100vh;
     background-position: right;
