--- a/src/components/Three_columns/ThreeColumns.scss
+++ b/src/components/Three_columns/ThreeColumns.scss
@@ -1,6 +1,6 @@
 .threeColumns {
   height: 384px;
-  background-image: url("../../assets/3_columns_background.png");
+  background-image: url("3_columns_background.png");
   display: flex;
   align-items: center;
   .threeColumns__list {
