--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,7 +4,7 @@
   justify-content: flex-end;
   align-items: center;
   .background {
-    background-image: url("../../assets/Background-Contact-Form.jpg");
+    background-image: url("Background-Contact-Form.jpg");
     position: absolute;
     right: 0;
     background-position: center;
