--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,7 @@
   align-items: center;
   position: absolute;
   width: 100%;
+  margin-left: -50px;
   .container {
     //margin-right: 80px;
     width: 50%;
