--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,14 +1,12 @@
 .footer {
   height: 50px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   align-items: center;
   position: absolute;
   width: 100%;
-  margin-left: -50px;
   .container {
-    //margin-right: 80px;
-    width: 50%;
+    width: inherit;
     display: flex;
     align-items: center;
     justify-content: space-between;
