--- a/src/components/Helps/Helps.scss
+++ b/src/components/Helps/Helps.scss
@@ -32,7 +32,7 @@
         text-align: center;
         &:hover {
           border: 1px solid #3C3C3C;
-          padding: -1px;
+          padding: 4px 24px;
         }
       }
     }
