--- a/src/components/ReturnForms/ReturnForm.scss
+++ b/src/components/ReturnForms/ReturnForm.scss
@@ -11,7 +11,14 @@
       align-items: flex-start;
       flex-direction: column;
       width: 575px;
+      .error {
+        margin-top: 40px;
 
+        h1 {
+          color: red;
+          font-weight: 500;
+        }
+      }
       .last_form {
         display: flex;
         margin-top: 50px;
@@ -60,6 +67,10 @@
             input[type="time"] {
               width: 250px;
               margin-left: 10px;
+            }
+            .comments {
+              width: 100px;
+              overflow-wrap: break-word;
             }
 
             textarea {
@@ -178,90 +189,112 @@
             background-color: $color-gold;
           }
         }
-
-        input[type="radio"] {
-          width: 40px;
-          height: 40px;
-          margin: 5px;
-        }
-
-        input {
-          width: inherit;
-          height: 40px;
-          background-color: transparent;
-          border: 1px solid $color-lightgrey;
-          font-size: 22px;
-          font-weight: 500;
-          color: $color-grey;
-          padding-left: 10px;
-          margin-bottom: 10px;
-          font-family: "Open Sans", sans-serif;
-
-        }
       }
-
-      .error {
-        margin-top: 40px;
-
-        h1 {
-          color: red;
-          font-weight: 500;
-        }
+      input[type="radio"] {
+        width: 25px;
+        height: 25px;
       }
-
-      .errors {
-        position: absolute;
-        font-size: 16px;
-        color: red;
-        font-weight: 400;
-        align-self: flex-end;
-      }
-
-      .buttons {
-        width: inherit;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        margin-top: 60px;
-
-        .btn {
-          width: 170px;
-          height: 80px;
-          border: none;
-          padding: 5px 15px;
-          background-color: transparent;
-          font-size: 24px;
+      .radio-label {
+        &::before {
+          content: "";
+          width: 30px;
+          height: 30px;
+          border: 1px solid $color-grey;
+          margin-bottom: 5px;
+          margin-right: 5px;
           cursor: pointer;
-          text-align: center;
-          font-family: $font-base;
-          color: $color-lightgrey;
-          font-weight: 300;
-          border: 1px solid $color-lightgrey;
-        }
-
-        .back {
-          margin-right: 40px;
+          display: inline-block;
+          position: relative;
         }
       }
+      .radio-label .checkmark {
+        width: 30px;
+        height: 30px;
+        margin-bottom: 5px;
+        margin-left: 1px;
+        background-color: #FAD648;
+        display: none;
+      }
+      .radio-label input[type="radio"] {
+        display: none;
+      }
+      .radio-label input[type="radio"]:checked + .checkmark {
+        position: absolute;
+        display: inline-block;
+      }
+    }
+
+
+    input {
+      width: inherit;
+      height: 40px;
+      background-color: transparent;
+      border: 1px solid $color-lightgrey;
+      font-size: 22px;
+      font-weight: 500;
+      color: $color-grey;
+      padding-left: 10px;
+      margin-bottom: 10px;
+      font-family: "Open Sans", sans-serif;
+
+    }
+  }
+  .errors {
+    position: absolute;
+    font-size: 16px;
+    color: red;
+    font-weight: 400;
+    align-self: flex-end;
+  }
+
+  .buttons {
+    width: inherit;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 60px;
+
+    .btn {
+      width: 170px;
+      height: 80px;
+      border: none;
+      padding: 5px 15px;
+      background-color: transparent;
+      font-size: 24px;
+      cursor: pointer;
+      text-align: center;
+      font-family: $font-base;
+      color: $color-lightgrey;
+      font-weight: 300;
+      border: 1px solid $color-lightgrey;
+    }
+
+    .back {
+      margin-right: 40px;
     }
   }
 }
-@media (max-width: 820px) {
+
+@media (max-width: 880px) {
   .return__form-main {
     .form {
       .form__main {
         .form__main-title.smaller {
-            margin: 5px 0;
-          }
+          margin: 5px 0;
+        }
+
         .label {
           font-size: 20px;
         }
+
         .last_form {
           margin-top: 10px;
           flex-direction: column;
+
           .address {
             width: 450px;
           }
+
           .collection-date {
             width: 450px;
           }
@@ -270,6 +303,7 @@
     }
   }
 }
+
 @media (max-width: 675px) {
   .return__form-main {
     .form {
@@ -277,8 +311,10 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+
       .form__main {
         width: 450px;
+
         label {
           input[type="radio"] {
             width: 30px;
@@ -293,17 +329,23 @@
 @media (max-width: 550px) {
   .return__form-main {
     .form {
-      margin: 50px 10px;
+      margin: 20px 10px;
+
       .form__main {
         width: 350px;
+        .buttons {
+          margin-top: 20px;
+        }
         .last_form {
           .address {
             width: 350px;
             margin-right: 0;
           }
+
           .collection-date {
             width: 350px;
             margin-right: 0;
+
             label {
               text-wrap: normal;
             }
