--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,6 +4,7 @@
 .first__look {
   height: 100vh;
   display: flex;
+  max-width: 1440px;
   .first__look-img {
     background-image: url("../Hero/Home-Hero-Image.jpg");
     width: 800px;
@@ -13,7 +14,11 @@
     background-size: cover;
   }
 }
-
+@media (max-width: 650px) {
+  .first__look-img {
+    display: none;
+  }
+}
 @media (max-width: 640px) {
   .first__look {
     justify-content: center;
