--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -4,13 +4,15 @@
   height: calc(100vh - 35px);
   margin-top: 35px;
   .container {
-    width: 100%;
+    max-width: 1440px;
+    margin: auto;
   }
   .login__main {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
     height: calc(100vh - 140px);
     .back__to-home {
       font-size: 18px;
@@ -38,6 +40,7 @@
       flex-direction: column;
       .inputs {
         background-color: #F0F1F1;
+        border-radius: 10px;
         width: 380px;
         height: 330px;
         display: flex;
@@ -87,6 +90,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        border-radius: 15px;
         label {
           display: flex;
           flex-direction: column;
