--- a/src/components/Navigation/LoginNav.scss
+++ b/src/components/Navigation/LoginNav.scss
@@ -3,19 +3,30 @@
   justify-content: flex-end;
   align-items: center;
   margin-right: 10px;
+
   .user {
     font-size: 14px;
     margin-right: 10px;
   }
+
   button {
     padding: 5px 15px;
     background-color: transparent;
     border: none;
     cursor: pointer;
     color: #737373;
+
     &:hover {
       border: 1px solid #FAD648;
       margin: -1px;
+    }
+  }
+}
+@media (max-width: 650px) {
+  .login__nav {
+    justify-content: flex-end;
+    button {
+      padding: 5px 10px;
     }
   }
 }
