--- a/src/components/Return_items/ReturnItems.scss
+++ b/src/components/Return_items/ReturnItems.scss
@@ -3,49 +3,59 @@
     margin: 20px;
   }
 }
+
 .simple__steps-return {
-  background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(253,253,253,1) 100%);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(253, 253, 253, 1) 100%);
+
   .container {
     max-width: 1440px;
     height: 100vh;
     display: flex;
+
     .form__hero {
-      background-image: url("Form-Hero-Image.jpg") ;
+      background-image: url("Form-Hero-Image.jpg");
       background-position: right;
       background-size: cover;
       width: 1500px;
       height: 100vh;
     }
+
     .simple__steps-hero {
       height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+
       .simple__steps-hero-main {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-right: 20px;
         margin-top: 150px;
+
         .simple__steps-title {
           font-size: 38px;
           font-weight: 500;
           text-align: center;
         }
+
         .simple__steps-title2 {
           margin: 20px 0;
           text-transform: uppercase;
         }
+
         .simple__steps-text {
           font-size: 40px;
           font-weight: 300;
           margin-bottom: 50px;
         }
+
         .simple__steps-list {
           display: flex;
           justify-content: center;
           align-items: center;
+
           .simple__steps-list-text {
             border: 1px solid #3C3C3C;
             width: 115px;
@@ -56,12 +66,14 @@
             justify-content: center;
             transform: rotate(45deg);
             margin-right: 15px;
+
             h1 {
               font-size: 32px;
               font-weight: 300;
               transform: rotate(-45deg);
               padding-right: 30px;
             }
+
             h2 {
               text-align: center;
               font-size: 22px;
@@ -76,6 +88,7 @@
     }
   }
 }
+
 @media (max-width: 650px) {
   .return__items {
     .hero__box {
@@ -86,34 +99,45 @@
   .simple__steps-return {
     display: flex;
     justify-content: center;
+
     .container {
       max-width: 450px;
+
       .simple__steps-hero {
         width: 450px;
+        .simple__steps-hero-main {
+          margin-right: 0;
+        }
       }
+
       .form__hero {
         display: none;
       }
     }
   }
 }
+
 @media (max-width: 580px) {
   .return__items {
     .hero__box {
-      margin: 5px;
+      margin: 20px;
     }
   }
   .simple__steps-return {
     .container {
       .simple__steps-hero {
-        margin-left: 20px;
+
         .simple__steps-hero-main {
           width: 450px;
+          margin-top: 100px;
+
           .simple__steps-text {
             text-align: center;
           }
+
           .simple__steps-list {
             flex-wrap: wrap;
+
             .simple__steps-list-text {
               margin-bottom: 10px;
             }
@@ -123,13 +147,21 @@
     }
   }
 }
+
 @media (max-width: 490px) {
+  .return__items {
+    .hero__box {
+      margin: 20px;
+      width: 350px;
+    }
+  }
   .simple__steps-return {
     .container {
       .simple__steps-hero {
-        margin-left: 20px;
+        width: 350px;
         .simple__steps-hero-main {
           width: 350px;
+          margin-top: 50px;
           .simple__steps-list {
             flex-wrap: wrap;
           }
@@ -138,6 +170,16 @@
     }
   }
 }
-@media (max-width: 450px) {
 
+@media (max-width: 450px) {
+  .return__items {
+    .hero__box {
+      width: 350px;
+    }
+  }
+  .simple__steps-return {
+    .container {
+      max-width: 350px;
+    }
+  }
 }
