--- a/src/components/ReturnForms/ReturnForm.scss
+++ b/src/components/ReturnForms/ReturnForm.scss
@@ -43,6 +43,10 @@
               margin-left: 10px;
               width: 250px;
             }
+            input[type="tel"] {
+              margin-left: 10px;
+              width: 250px;
+            }
           }
         }
 
