--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -12,7 +12,7 @@
     width: 100vw;
     height: 100vh;
     z-index: -1;
-    opacity: 10%;
+    opacity: .1;
   }
   .contact__us {
     display: flex;
