--- a/src/components/Return_items/ReturnItems.scss
+++ b/src/components/Return_items/ReturnItems.scss
@@ -170,6 +170,7 @@
           }
           .simple__steps-list {
             flex-wrap: wrap;
+            padding-left: 20px;
           }
         }
       }
