--- a/src/components/ReturnForms/Summary.scss
+++ b/src/components/ReturnForms/Summary.scss
@@ -56,6 +56,7 @@
 @media (max-width: 890px) {
   .person-summary {
     margin-top: 20px;
+
   }
 }
 @media (max-width: 680px) {
@@ -77,5 +78,11 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: 510px) {
+  .person-summary {
+    width: 350px;
   }
 }
